--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -10,6 +10,9 @@
     <li class="item" routerLink="/clients"><a>Clientes</a></li>
 
     <li class="item" routerLink="/sales"><a>Ventas</a></li>
+
+    <li class="item" routerLink="/credits"><a>Créditos</a></li>
+
     <li>
       <a (click)="toggleSubmenu()">Devoluciones </a>
       <!-- Submenu que se despliega cuando isSubmenuOpen es true -->
