--- a/FRONT-END/src/app/modules/loss/loss.component.html
+++ b/FRONT-END/src/app/modules/loss/loss.component.html
@@ -19,11 +19,11 @@
     <form [formGroup]="LossForm">
       
       <div class="field-group">
-        <div class="field" [ngClass]="{'error': isFieldInvalid('idCodigoBarra')}">
-          <label for="idCodigoBarra">Codigo Barra</label>
-          <input type="text" pInputText id="idCodigoBarra" formControlName="idCodigoBarra" required />
-          <small class="p-error" *ngIf="isFieldInvalid('idCodigoBarra')">
-            {{ getErrorMessage('idCodigoBarra') }}
+        <div class="field" [ngClass]="{'error': isFieldInvalid('CodigoProducto')}">
+          <label for="CodigoProducto">Codigo Barra</label>
+          <input type="text" pInputText id="CodigoProducto" formControlName="CodigoProducto" required />
+          <small class="p-error" *ngIf="isFieldInvalid('CodigoProducto')">
+            {{ getErrorMessage('CodigoProducto') }}
           </small> 
         </div>
 
