--- a/FRONT-END/src/app/modules/return-provider/return-provider.component.html
+++ b/FRONT-END/src/app/modules/return-provider/return-provider.component.html
@@ -1,1 +1,69 @@
-<p>return-provider works!</p>
+<app-crud [items]="filteredReturnProvider" 
+[columns]="colums" 
+[canDelete]="false" 
+[canExport]="false" 
+[canEdit]="false"
+
+    [canSeeDetail]="false" 
+    [actions]="false" 
+    (create)="openCreateModal()" 
+    (search)="searchreturnProvider($event)">
+</app-crud>
+
+<!-- FORMULARIOS -->
+
+<p-dialog [(visible)]="showModal" [style]="{width: '450px'}"
+    [header]="isEditing ? 'Editar Cliente' : 'Registrar devolución a proveedor '" [modal]="true" class="p-fluid" appCrudModal
+    [isEditing]="isEditing" (save)="savereturnProvider()" (cancel)="closeModal()">
+    <ng-template pTemplate="content">
+        <form [formGroup]="returnProviderForm">
+
+            <div class="field-group">
+                <div class="field" [ngClass]="{'error': isFieldInvalid('idProveedor')}">
+                    <label for="proveedor">Proveedores</label>
+                    <div class="p-inputgroup">
+                        <p-dropdown [options]="providers" formControlName="idProveedor" optionLabel="nombreProveedor"
+                            optionValue="idProveedor" placeholder="Seleccionar proveedor" [virtualScroll]="true"
+                            [virtualScrollItemSize]="38" styleClass="w-full">
+                        </p-dropdown>
+                       
+                    </div>
+                    <small class="p-error" *ngIf="isFieldInvalid('idProveedor')">
+                        {{ getErrorMessage('idProveedor') }}
+                    </small>
+                </div>
+            </div>
+            <div class="field-group">
+                <div class="field" [ngClass]="{'error': isFieldInvalid('CodigoProducto')}">
+                    <label for="CodigoProducto">Codigo Barra</label>
+                    <input type="text" pInputText id="CodigoProducto" formControlName="CodigoProducto" required />
+                    <small class="p-error" *ngIf="isFieldInvalid('CodigoProducto')">
+                        {{ getErrorMessage('CodigoProducto') }}
+                    </small>
+                </div>
+
+                <div class="field" [ngClass]="{'error': isFieldInvalid('cantidad')}">
+                    <label for="cantidad">cantidad</label>
+                    <input type="text" pInputText id="cantidad" formControlName="cantidad" required />
+                    <small class="p-error" *ngIf="isFieldInvalid('cantidad')">
+                        {{ getErrorMessage('cantidad') }}
+                    </small>
+                </div>
+            </div>
+
+            <div class="field" [ngClass]="{'error': isFieldInvalid('motivoDevolucion')}">
+                <label for="motivoDevolucion">Motivo</label>
+                <input type="text" pInputText id="motivoDevolucion" formControlName="motivoDevolucion" required />
+                <small class="p-error" *ngIf="isFieldInvalid('motivoDevolucion')">
+                    {{ getErrorMessage('motivoDevolucion') }}
+                </small>
+            </div>
+        </form>
+    </ng-template>
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn"
+            (click)="closeModal()"></button>
+        <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check"
+            class="p-button-text custom-save-btn" (click)="savereturnProvider()"></button>
+    </ng-template>
+</p-dialog>
