--- a/FRONT-END/src/styles.css
+++ b/FRONT-END/src/styles.css
@@ -13,21 +13,19 @@
 @tailwind utilities;
 
 
-/* Estilos globales o de componente */
+/* Estilos globales*/
 html, body {
-  background-color: #f0f0f0; /* Cambia este color por el que desees */
+  background-color: #f0f0f0;
 }
-
 
 .field-group {
   display: flex;
   justify-content: space-between;
-  gap: 1rem; /* Ajusta el espacio entre campos */
+  gap: 1rem;
 }
 
 .field {
   flex: 1;
-  margin-right: 1rem;
   margin-top: 10px;
 }
 
@@ -36,7 +34,7 @@ html, body {
 }
 
 .p-inputtext {
-    /* Asegura que este estilo se aplique correctamente */
+  margin-top: 5px;
     border: 1px solid #ccc !important;
     padding: 8px !important;
   }
